Updated text content in index.html

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
   <!-- Starters -->
   <section class="menu-category">
-    <h3>🥗 Starters</h3>
+    <h3> Starters</h3>
     <div class="menu-items">
       <div class="item">
         <h4>Garlic Bread</h4>
@@ -71,7 +71,7 @@
 
   <!-- Main Course -->
   <section class="menu-category">
-    <h3>🍝 Main Course</h3>
+    <h3> Main Course</h3>
     <div class="menu-items">
       <div class="item">
         <h4>Pasta Alfredo</h4>
@@ -118,7 +118,7 @@
 
   <!-- Desserts -->
   <section class="menu-category">
-    <h3>🍰 Desserts</h3>
+    <h3> Desserts</h3>
     <div class="menu-items">
       <div class="item">
         <h4>Chocolate Lava Cake</h4>
@@ -154,7 +154,7 @@
 
     <!-- Drinks & Beverages -->
 <section class="menu-category">
-  <h3>☕ Drinks & Beverages</h3>
+  <h3> Drinks & Beverages</h3>
   <div class="menu-items">
     <div class="item">
       <h4>Cold Coffee</h4>
@@ -198,7 +198,7 @@
  
     <!-- Chef’s Special -->
 <section class="special">
-  <h3>👨‍🍳 Chef’s Special</h3>
+  <h3> Chef’s Special</h3>
   <div class="special-box">
     <img src="picture 2.jpg" alt="Chef's Special Dish">
     <div>
@@ -248,7 +248,7 @@
 
   <!-- Menu of the Day -->
   <section class="menu-day">
-    <h3>📅 Menu of the Day</h3>
+    <h3> Menu of the Day</h3>
     <p>Paneer Tikka + Butter Naan + Sweet Lassi – ₹399</p>
   </section>
 </main>
@@ -257,9 +257,9 @@
   <!-- Contact Section -->
    <section id="contact" class="contact">
     <h2>Contact Us</h2>
-    <p>📍 123 Food Street, Chennai</p>
-    <p>📞 +91 98765 43210</p>
-    <p>🕒 Mon–Sun: 10 AM – 11 PM</p>
+    <p>Address: 123 Food Street, Chennai</p>
+    <p>Phone: +91 98765 43210</p>
+    <p>Open: Mon–Sun: 10 AM – 11 PM</p>
   </section>
 
   <!-- Footer -->
